src/test/julian/Parsing/SyntaxError/prog_1.jul
int x = 5;
int y =int;
int z = 3;